--- a/tiarra/HACKING
+++ b/tiarra/HACKING
@@ -1,7 +1,7 @@
 モジュールについて
 
 * モジュールの新規作成
-module/Skelton.pm にモジュールのスケルトンがありますので、
+module/Skeleton.pm にモジュールのスケルトンがありますので、
 これをコピーして不要な関数を削除すれば、作ることが出来ます。
 
 * 注意すべき事項
@@ -120,7 +120,7 @@ module/Skelton.pm にモジュールのスケルトンがありますので、
 				一般的な自動反応をするのに有用なクロージャを生成する。
     + sendto_channel_closure(...)
 				チャンネル等に PRIVMSG / NOTICE を送るクロージャを生成する。
-      一般的な使い方は Skelton.pm に書いておきました。
+      一般的な使い方は Skeleton.pm に書いておきました。
 
 * remark のあるオブジェクト
   remark とは、オブジェクトに関連づけられた、自由に使える key/value pair です。
